Fixed keypad + ph. no.

--- a/ShopConnect/Info.plist
+++ b/ShopConnect/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>We need your location to connect you with a nearby grocery delivery</string>
+	<string>We need your location to connect a grocery delivery</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
